--- a/Views/ClassSection/QuanLyLopHoc.cshtml
+++ b/Views/ClassSection/QuanLyLopHoc.cshtml
@@ -32,8 +32,6 @@
     }
 
     var lstTkb = model.ThoiKhoaBieu.Where(w => w.ID_HocKy == id_hkGanNhat && w.ID_Nganh == id_nganhCNTT).ToList();
-
-
 }
 <script src="~/ActiveItemMenu/ClassSection/index.js"></script>
 <section class="container-fluid p-4">
@@ -131,11 +129,12 @@
         </div>
     </div>
 
-    <div class="modal fade" id="diemdanh" tabindex="-1" role="dialog" aria-labelledby="dexuattrogiang" aria-hidden="true">
+
+    <div class="modal fade" id="diemdanh" tabindex="-1" role="dialog" aria-labelledby="diemdanh" aria-hidden="true">
         <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="dexuattrogiangTitle">Điểm danh LHP 221_71ITBS10103_01</h5>
+                    <h5 class="modal-title" id="diemdanhTitle">Điểm danh LHP 221_71ITBS10103_01</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"></span>
                     </button>
@@ -143,8 +142,27 @@
                 <div class="modal-body">
                     <div class="row mb-4">
                         <div class="col-12">
-                            <h5>Mã LHP: 221_71ITBS10103_01</h5>
-                            <h5>Tên LHP: Nhập môn công nghệ thông tin</h5>
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="mb-3">
+                                        <select id="hocky" class="form-select w-auto">
+                                            <option value="7">Thứ 2, Tiết 1 - 3, Tuần 5</option>
+                                            <option value="7">Thứ 2, Tiết 1 - 3, Tuần 6</option>
+                                            <option value="7">Thứ 2, Tiết 1 - 3, Tuần 7</option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <div class="col-6" style="display: flex; flex-direction: row; align-items: end">
+                                    <div class="w-100 text-end">
+                                        <a id="btnExportTkb" class="btn btn-outline-secondary">
+                                            <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <h5>Lớp HP: 221_71ITBS10103_01 - Nhập môn công nghệ thông tin</h5>
                             <h5>GV: Lê Thị Hồng</h5>
                             <h5>Sỉ Số: 0/20</h5>
                         </div>
@@ -153,17 +171,17 @@
                         </div>
                         <div class="col-12">
                             <div class="mb-4">
-                                <h5 class="text-center" for="tennganh">DANH SÁCH SINH VIÊN LỚP HỌC</h5>
+                                <h5 class="text-center" for="tennganh">DANH SÁCH SINH VIÊN - ĐIỂM DANH</h5>
                             </div>
                         </div>
                         <div class="col-12">
-                            <div class="table-responsive">
-                                <table id="diemDanhTable" class="table table-borderless text-nowrap mb- table-centered">
+                            <div class="table-card">
+                                <table id="diemDanhTable" class="table table-hover" style="width:100%">
                                     <thead class="table-light">
                                         <tr>
                                             <th>TT</th>
                                             <th>MSSV</th>
-                                            <th>Họ & Tên</th>
+                                            <th>Họ và Tên</th>
                                             <th>Email</th>
                                             <th>Ngày sinh</th>
                                             <th>Giới tính</th>
@@ -178,7 +196,7 @@
                                             <tr>
                                                 <td>@i</td>
                                                 <td>MSSV@(i)</td>
-                                                <td>Họ và tên của sinh viên @(i)</td>
+                                                <td class="text-nowrap">Họ và tên của sinh viên @(i)</td>
                                                 <td>Địa chỉ emial @(i)</td>
                                                 <td>@DateTime.Now.ToString("dd/MM/yyyy")</td>
                                                 <td>Giới tính</td>
@@ -203,13 +221,14 @@
             </div>
         </div>
     </div>
-
 </section>
 <script src="~/Validation/teacher/classsection/suggestedTA.js"></script>
 <script>
     $(document).ready(function () {
-        $('#diemDanhTable').DataTable({
-            pageLength: 100
+        $("#diemDanhTable").DataTable({
+            responsive: !0,
+            pagingType: "numbers",
+            pageLength: 100,
         });
     });
 </script>
