--- a/Views/TimeTable/_IndexBCN.cshtml
+++ b/Views/TimeTable/_IndexBCN.cshtml
@@ -85,7 +85,7 @@
                         }
                     </select>
                 </div>
-                <div class="mb-3 col-md-3 col-12">
+                <div class="mb-3 col-md-4 col-12">
                     <label class="form-label">Lọc giảng viên</label>
                     <select class="form-select" id="locgiangvien" placeholder="Lọc giảng viên" multiple="multiple" filter="true">
                         @foreach (var item in lstTkb.GroupBy(o => o.TenCBGD).ToList())
@@ -95,9 +95,9 @@
                         }
                     </select>
                 </div>
-                <div class="mb-3 col-md-3 col-12" style="display: flex; flex-direction: row; align-items: end">
-                    <div style="width: 100%; text-align: end">
-                        <a id="btnExportTkb" class="btn btn-outline-secondary">
+                <div class="mb-3 col-md-2 col-12" style="display: flex; flex-direction: row; align-items: end">
+                    <div class="w-100 text-end">
+                        <a id="btnExportTkb" class="btn btn-outline-secondary w-100">
                             <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
                         </a>
                     </div>
